--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -30,4 +30,8 @@
     <string name="football">Calcio</string>
     <string name="sport">Sport</string>
     <string name="music">Musica</string>
+    <string name="appearance">Aspetto</string>
+    <string name="update_interval">Intervallo aggiornamento</string>
+    <string name="notifications">Notifiche</string>
+    <string name="enable_notifications">Attiva notifiche</string>
 </resources>
