--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,10 @@
     <string name="sport">Sport</string>
     <string name="music">Music</string>
     <string name="techno" translatable="false">Techno</string>
+    <string name="appearance">Appearance</string>
+    <string name="update_interval">Update interval</string>
+    <string name="notifications">Notifications</string>
+    <string name="enable_notifications">Enable notifications</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
