--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -34,4 +34,8 @@
     <string name="update_interval">Intervallo aggiornamento</string>
     <string name="notifications">Notifiche</string>
     <string name="enable_notifications">Attiva notifiche</string>
+    <string name="title_activity_maps">Mappa</string>
+    <string name="title_activity_settings">Impostazioni</string>
+    <string name="your_position">La tua posizione</string>
+    <string name="position_permission_denied">Per poter accedere alle funzionalità di base dell\'applicazione, è necessario abilitare l\'accesso alla posizione.</string>
 </resources>
