--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,8 @@
     <string name="enable_notifications">Enable notifications</string>
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="title_activity_maps">Map</string>
+    <string name="your_position">Your position</string>
+    <string name="position_permission_denied">To use this app\'s core functionality, you have to enable location access.</string>
+
 
 </resources>
